[gd_scene load_steps=3 format=3 uid="uid://xvlenbsxkake"]

[ext_resource type="Script" path="res://entities/sample_spells/suburban/suburban_spell.gd" id="1_wg4f2"]
[ext_resource type="AudioStream" uid="uid://j6gwpba2251i" path="res://sounds/sample_kits/ta_tendo_nao/suburban.mp3" id="2_mprws"]

[node name="SuburbanSpell" type="Node"]
script = ExtResource("1_wg4f2")
include_input_trigger_on_bar = 1
audio = ExtResource("2_mprws")
include_trigger_on_bar = 1

[connection signal="triggered" from="." to="." method="_on_triggered"]
[connection signal="triggered_by_input" from="." to="." method="_on_triggered_by_input"]
